--- a/package.json
+++ b/package.json
@@ -18,22 +18,24 @@
     "@angular/compiler": "^8.2.6",
     "@angular/core": "^8.2.6",
     "@angular/forms": "^8.2.6",
-    "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.0",
     "@angular/platform-browser": "^8.2.6",
     "@angular/platform-browser-dynamic": "^8.2.6",
     "@angular/router": "^8.2.6",
-    "core-js": "^3.2.1",
+    "core-js": "2.6.8",
     "rxjs": "^6.5.3",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.10.2"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1",
+    "@angular/http": "7.2.15"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.4",
     "@angular/cli": "^8.3.4",
     "@angular/compiler-cli": "^8.2.6",
     "@types/jasmine": "3.4.0",
     "@types/node": "^12.7.5",
-    "codelyzer": "~5.1.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.3.0",
@@ -44,6 +46,7 @@
     "protractor": "~5.4.2",
     "ts-node": "8.3.0",
     "tslint": "^5.20.0",
-    "typescript": "~3.6.3"
+    "typescript": "~3.5.0",
+    "@angular/http": "7.2.15"
   }
 }
